syntax = "proto3";

import "feature/process.proto";

package blueOceanField.feature;


service FeatureProcessService {
  rpc GetFeatureProcessMeta (FeatureProcessMetaRequest) returns (FeatureProcessMetaResponse);
}

message FeatureProcessMetaRequest {}

message FeatureProcessMetaResponse {
  repeated blueOceanField.feature.process.FeatureProcess metadata = 1;
}
